@@ -105,6 +105,15 @@ def main(args):
         and not options.dns_server_set and not options.acl ):
     cli_common_lib.DnsError('To make a view, an ACL must be specified with '
                             '--acl.', 1)
+  elif( options.acl ):
+    acls = roster_client_lib.RunFunction(u'ListACLs', options.username,
+                                         credfile=options.credfile,
+                                         credstring=options.credstring,
+                                         server_name=options.server,
+                                         kwargs={u'acl_name': options.acl})[
+                                                         'core_return']
+    if( acls == {} ):
+      cli_common_lib.DnsError('ACL "%s" does not exist.' % options.acl, 1)
   elif( options.view and options.view_subset and not options.dns_server_set ):
     pass
   elif( options.view and options.dns_server_set and not options.view_subset ):
@@ -164,14 +173,6 @@ def main(args):
         server_name=options.server, kwargs={'view_name': options.view,
                                             u'acl_name': options.acl})[
                                                 'core_return']
-    acls = roster_client_lib.RunFunction(u'ListACLs', options.username,
-                                         credfile=options.credfile,
-                                         credstring=options.credstring,
-                                         server_name=options.server,
-                                         kwargs={u'acl_name': options.acl})[
-                                                         'core_return']
-    if( acls == {} ):
-      cli_common_lib.DnsError('ACL "%s" does not exist.' % options.acl, 1)
     if( view_acl_assignments == [] ):
       roster_client_lib.RunFunction(u'MakeViewToACLAssignments',
                                     options.username,
