@@ -6,7 +6,9 @@ Current Release
 - Fixed dnsmkzone's handling of reverse zones, fixed unittest
 - Fixed dnsmkview erroring out after already making view.
 - Fixed dnslsview KeyError with dns server sets.
-- Removed list function from dnsmkview.
+- Removed list function from dnsmkhost.
+- Fixed dnsmkview erroring out for no acl existing after creating a view
+- Fixed dnsmkview unittest.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
